fix: page scrollbar layout shift (#45)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@
 html {
 	background-color: #141317;
 	color: #fff;
-
 	overflow-y: scroll;
+	scrollbar-gutter: stable;
 }
 
 
